--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,7 @@
             <div class="carousel slide" data-ride="carousel" id="quote-carousel">
                 <!-- Bottom Carousel Indicators -->
                 <ol class="carousel-indicators">
-                    <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg" alt="">
+                    <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive" src="img/wired-icon.png" alt="Wired Magazine logo">
                     </li>
                     <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/rssems/128.jpg" alt="">
                     </li>
