--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <!-- TESTIMONIALS -->
 
             <div class="row" align="center">
-                <h1 id="logo">i nostri testimonials</h1>
+                <h1 id="logo_featurette">i nostri testimonials</h1>
             </div>
             <div class="container featurette">
 
