Update testimonials desktop & mobile + sitemap
Aggiunti loghi testimonials e sitemap temporanea basata su
glastravelsdevteam.github.io

--- a/footer.html
+++ b/footer.html
@@ -45,7 +45,7 @@
                                     <br/>
                                     <a href="/viaggi/europa.html">Europa</a>
                                     <br/>
-                                    <a href="#">Offerte</a>
+                                    <a href="/viaggi/europa/parigi.html">Parigi</a>
                                 </p>
                             </li>
                         </div>
@@ -68,7 +68,7 @@
                 <!--- RIGA COPYRIGHT --->
 
                 <div class="row" id="copyright">
-                    <p class="pull-left">Glas Travels &reg; 2015 | <a href="#">Mappa del sito</a>
+                    <p class="pull-left">Glas Travels &reg; 2015 | <a href="/sitemap.xml">Mappa del sito</a>
                     </p>
                     <p class="pull-right"><a href="#">Top</a>
                     </p>
