--- a/index.html
+++ b/index.html
@@ -316,12 +316,36 @@
                     <div class="row featurette visible-xs">
                         <div class="col-sm-7">
                             <h4 class="featurette-heading"><em>Che cosa dicono di noi. </em><span class="text-muted">Wired Magazine</span></h4>
-                            <p class="lead">Chi gestisce il sito è molto efficiente. In due giorni, il viaggio dei propri sogni è bello che prenotato. <em>Glas Travels</em> scalerà sicuramente le classifiche per il miglior TOP TRAVEL SITE.
-                                <br>
-                            </p>
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur!</p>
                         </div>
                         <div class="col-sm-5 hidden-xs">
-                            <img class="featurette-image img-responsive" src="img/Wired_logo.png" alt="Wired logo">
+                            <img class="featurette-image img-responsive" src="/img/Wired_logo.png" alt="Wired logo">
+                        </div>
+                    </div>
+
+                    <hr class="featurette-divider">
+                    <br>
+
+                    <div class="row featurette visible-xs">
+                        <div class="col-sm-7">
+                            <h4 class="featurette-heading"><em>Che cosa dicono di noi. </em><span class="text-muted">Natural Geographic Travel</span></h4>
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur!</p>
+                        </div>
+                        <div class="col-sm-5 hidden-xs">
+                            <img class="featurette-image img-responsive" src="/img/nat-geo-travel-logo.png" alt="Natural Geographic Travel logo">
+                        </div>
+                    </div>
+
+                    <hr class="featurette-divider">
+                    <br>
+
+                    <div class="row featurette visible-xs">
+                        <div class="col-sm-7">
+                            <h4 class="featurette-heading"><em>Che cosa dicono di noi. </em><span class="text-muted">Luxury Travel Magazine</span></h4>
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur!</p>
+                        </div>
+                        <div class="col-sm-5 hidden-xs">
+                            <img class="featurette-image img-responsive" src="/img/luxury-travel-mag.png" alt="Luxury Travel Magazine logo">
                         </div>
                     </div>
 
