--- a/testimonials.html
+++ b/testimonials.html
@@ -4,11 +4,11 @@
             <div class="carousel slide" data-ride="carousel" id="quote-carousel">
                 <!-- Bottom Carousel Indicators -->
                 <ol class="carousel-indicators">
-                    <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive" src="img/wired-icon.png" alt="Wired Magazine logo">
+                    <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive" src="/img/wired-icon.png" alt="Wired Magazine logo">
                     </li>
-                    <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/rssems/128.jpg" alt="">
+                    <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="/img/nat-geo-travel-logo.png" alt="Natural Geographic Travel logo">
                     </li>
-                    <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/128.jpg" alt="">
+                    <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="/img/luxury-travel-mag.png" alt="Luxury Travel Magazine logo">
                     </li>
                 </ol>
 
@@ -21,7 +21,7 @@
                             <div class="row">
                                 <div class="col-sm-8 col-sm-offset-2">
 
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. !</p>
+                                    <p class="testimonials">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur!</p>
                                     <small>Wired Magazine</small>
                                 </div>
                             </div>
@@ -33,8 +33,8 @@
                             <div class="row">
                                 <div class="col-sm-8 col-sm-offset-2">
 
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                                    <small>Someone famous</small>
+                                    <p class="testimonials">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                                    <small>National Geographic Travel</small>
                                 </div>
                             </div>
                         </blockquote>
@@ -45,8 +45,8 @@
                             <div class="row">
                                 <div class="col-sm-8 col-sm-offset-2">
 
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. .</p>
-                                    <small>Someone famous</small>
+                                    <p class="testimonials">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. .</p>
+                                    <small>Luxury Travel Magazine</small>
                                 </div>
                             </div>
                         </blockquote>
