--- a/viaggi/africa/cape-town.html
+++ b/viaggi/africa/cape-town.html
@@ -47,9 +47,12 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="/index.html">Home</a>
                 </li>
-                <li><a href="/viaggi/africa.html">Asia</a>
+                <li>Viaggi
                 </li>
-                <li class="active">Cape Town</li>
+                <li>Africa
+                </li>
+                <li class="active">Cape Town
+                </li>
             </ol>
 
 
