--- a/viaggi/america.html
+++ b/viaggi/america.html
@@ -47,7 +47,10 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="/index.html">Home</a>
                 </li>
-                <li class="active">America</li>
+                <li>Viaggi
+                </li>
+                <li class="active">America
+                </li>
             </ol>
 
 
