--- a/viaggi/america/rio-de-janeiro.html
+++ b/viaggi/america/rio-de-janeiro.html
@@ -47,9 +47,12 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="/index.html">Home</a>
                 </li>
-                <li><a href="/viaggi/america.html">America</a>
+                <li>Viaggi
                 </li>
-                <li class="active">Rio de Janeiro</li>
+                <li>America
+                </li>
+                <li class="active">Rio de Janeiro
+                </li>
             </ol>
 
 
