--- a/viaggi/asia/tokyo.html
+++ b/viaggi/asia/tokyo.html
@@ -47,9 +47,12 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="/index.html">Home</a>
                 </li>
-                <li><a href="/viaggi/asia.html">Asia</a>
+                <li>Viaggi
                 </li>
-                <li class="active">Tokyo</li>
+                <li>Asia
+                </li>
+                <li class="active">Tokyo
+                </li>
             </ol>
 
 
