--- a/viaggi/europa/barcellona.html
+++ b/viaggi/europa/barcellona.html
@@ -47,9 +47,12 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="/index.html">Home</a>
                 </li>
-                <li><a href="/viaggi/europa.html">Europa</a>
+                <li>Viaggi
                 </li>
-                <li class="active">Barcellona</li>
+                <li>Europa
+                </li>
+                <li class="active">Barcellona
+                </li>
             </ol>
 
 
