--- a/viaggi/oceania/sydney.html
+++ b/viaggi/oceania/sydney.html
@@ -47,9 +47,12 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="/index.html">Home</a>
                 </li>
-                <li><a href="/viaggi/oceania.html">Oceania</a>
+                <li>Viaggi
                 </li>
-                <li class="active">Sydney</li>
+                <li>Oceania
+                </li>
+                <li class="active">Sydney
+                </li>
             </ol>
 
 
