--- a/viaggi/america/las-vegas.html
+++ b/viaggi/america/las-vegas.html
@@ -47,9 +47,12 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="/index.html">Home</a>
                 </li>
-                <li><a href="/viaggi/america.html">America</a>
+                <li>Viaggi
                 </li>
-                <li class="active">Las Vegas</li>
+                <li>America
+                </li>
+                <li class="active">Las Vegas
+                </li>
             </ol>
 
 
