--- a/viaggi/asia/shanghai.html
+++ b/viaggi/asia/shanghai.html
@@ -47,9 +47,12 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="/index.html">Home</a>
                 </li>
-                <li><a href="/viaggi/asia.html">Asia</a>
+                <li>Viaggi
                 </li>
-                <li class="active">Shanghai</li>
+                <li>Asia
+                </li>
+                <li class="active">Shanghai
+                </li>
             </ol>
 
 
