--- a/viaggi/europa.html
+++ b/viaggi/europa.html
@@ -47,7 +47,10 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="/index.html">Home</a>
                 </li>
-                <li class="active">Europa</li>
+                <li>Viaggi
+                </li>
+                <li class="active">Europa
+                </li>
             </ol>
 
 
