--- a/carrello_conparigi.html
+++ b/carrello_conparigi.html
@@ -162,7 +162,7 @@
                             <p>Totale: EUR 5.100,00</p>
                             <hr/>
 
-                            <a class="btn btn-warning pull-right" href="/carrello_vuoto.html" role="button">Svuota carrello</a>
+                            <a class="btn btn-default pull-right" href="/carrello_vuoto.html" role="button">Svuota carrello</a>
                         </div>
                     </div>
 
