--- a/carrello.html
+++ b/carrello.html
@@ -132,7 +132,7 @@
                             <p>Totale: EUR 3.400,00</p>
                             <hr/>
 
-                            <a class="btn btn-warning pull-right" href="/carrello_vuoto.html" role="button">Svuota carrello</a>
+                            <a class="btn btn-default pull-right" href="/carrello_vuoto.html" role="button">Svuota carrello</a>
                         </div>
                     </div>
 
