--- a/profilo-modifica.html
+++ b/profilo-modifica.html
@@ -60,9 +60,24 @@
 
             <div class="row">
 
+                <div class="col-md-3">
+                    
+                    <!-- SIDE MENU -->
+
+                    <div class="list-group">
+                        <span class="list-group-item list-group-item-default">Area personale</span>
+                        <a href="profilo.html" class="list-group-item active"><i class="fa fa-user"></i> Profilo</a>
+                        <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
+                        <a href="acquisti.html" class="list-group-item"><i class="fa fa-credit-card"></i> I miei acquisti</a>
+                        <a href="recensioni_paginaprofilo.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                    </div>
+
+                </div>
+            
                 <!-- SECTION CONTENT -->
 
-                <div class="col-md-12">
+                <div class="col-md-9">
 
                     <!-- DATI PERSONALI -->
 
