--- a/genpage.html
+++ b/genpage.html
@@ -134,7 +134,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molestie a sapien eget lobortis. Proin sed magna tincidunt, scelerisque mauris eu, mattis mi. Aliquam venenatis odio eu egestas consectetur. Suspendisse mattis, nulla ac mollis feugiat, nulla mauris elementum nibh, ac lacinia lorem ante pretium mi. Nam sed commodo quam. Quisque justo augue, commodo nec dui quis, porta bibendum nisi. Vivamus ac orci bibendum, tincidunt eros ut, feugiat risus. Donec vitae faucibus neque. Proin sodales enim purus, nec pretium metus porttitor in. Etiam laoreet, elit ut lobortis auctor, orci eros eleifend est, ut rhoncus magna tellus in ipsum. Aliquam eu tincidunt orci. Praesent eu metus maximus, eleifend est ac, consectetur nisl. Aliquam mollis risus velit, ut aliquet turpis suscipit ac.</p>
                 </div>
                 <!-- ===== TAG SOCIALI  =====-->
-                <div class="col-sm-5 hidden-xs">
+                <div class="col-sm-5">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title">Social tags - because tagging is good.</h3>
