--- a/sicurezza.html
+++ b/sicurezza.html
@@ -88,7 +88,7 @@
                 <!-- /.ROW -->
                 <div class="hidden-md hidden-lg"><hr></div>
                 <!-- ===== TAG SOCIALI  =====-->
-                <div class="col-md-3 hidden-xs" id="tags">
+                <div class="col-md-3" id="tags">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title" id="descrizione">TAGS</h3>
