--- a/lavori_stagionali.html
+++ b/lavori_stagionali.html
@@ -103,7 +103,7 @@
                 <!-- /.COL-MD-6 -->
                 <div class="hidden-md hidden-lg"><br><hr></div>
                 <!-- ===== TAG SOCIALI  =====-->
-                <div class="col-md-3 hidden-xs" id="tags">
+                <div class="col-md-3" id="tags">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title" id="descrizione">TAGS</h3>
