--- a/!! ROBA EXTRA !!/articolo_singolo.html
+++ b/!! ROBA EXTRA !!/articolo_singolo.html
@@ -15,20 +15,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Main CSS -->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
 
     <!-- FontAwesome -->
-    <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="fontawesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/fontawesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- MapGlyphs -->
-    <link href="mapglyphs/mapglyphs.css" rel="stylesheet">
+    <link href="/mapglyphs/mapglyphs.css" rel="stylesheet">
 
     <!-- Material Design iconic font -->
-    <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
+    <link href="/material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
 
 
 </head>
@@ -45,7 +45,7 @@
             <!-- PATH -->
 
             <ol class="breadcrumb" id="path">
-                <li><a href="index.html">Home</a>
+                <li><a href="/index.html">Home</a>
                 </li>
                 <li>Azienda</li>
                 <li class="active">Articolo</li>
@@ -125,22 +125,22 @@ Nulla in sodales nisi. Pellentesque mi tellus, bibendum id lacinia aliquet, comm
 
         <!-- Bootstrap Javascript Core-->
 
-        <script src="js/bootstrap.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
         <!-- <script src="js/docs.min.js"></script> -->
 
         <!-- scripts parts -->
 
         <script>
-            $("#navbar").load("navbar.html");
+            $("#navbar").load("/navbar.html");
         </script>
         <script>
-            $("#footer").load("footer.html");
+            $("#footer").load("/footer.html");
         </script>
         <script>
-            $("#sidebar").load("sidebar.html");
+            $("#sidebar").load("/sidebar.html");
         </script>
         <script>
-            $("#upload").load("upload.html");
+            $("#upload").load("/upload.html");
         </script>
 
     </div>
