--- a/recensioni_20140730-1_maldive.html
+++ b/recensioni_20140730-1_maldive.html
@@ -84,66 +84,73 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/maldive550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <div class="col-md-3">
+                                <div class="row">
+                                    <img src="img/user/woman.jpg" alt="Immagine di profilo di Tizio" class="center-block hidden-xs " />
+                                </div>
+                                <div class="row">
+                                    <h4><p align="center">Utente: Elena Colombo</p></h4>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="purchase-item-details">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
+                                    <hr style="margin-bottom: 5px;" /><br>
 
-                            <div class="purchase-item-details">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
-                                <hr style="margin-bottom: 5px;" /><br>
-                            
-                                <!-- Bootstrap Image Gallery lightbox -->
-                                <div id="blueimp-gallery" class="blueimp-gallery">
-                                    <!-- The container for the modal slides -->
-                                    <div class="slides"></div>
-                                    <!-- Controls for the borderless lightbox -->
-                                    <h3 class="title"></h3>
-                                    <a class="prev">‹</a>
-                                    <a class="next">›</a>
-                                    <a class="close">×</a>
-                                    <a class="play-pause"></a>
-                                    <ol class="indicator"></ol>
-                                    <!-- The modal dialog, which will be used to wrap the lightbox content -->
-                                    <div class="modal fade">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close" aria-hidden="true">&times;</button>
-                                                    <h4 class="modal-title"></h4>
-                                                </div>
-                                                <div class="modal-body next"></div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-default pull-left prev">
-                                                        <i class="glyphicon glyphicon-chevron-left"></i>
-                                                        Previous
-                                                    </button>
-                                                    <button type="button" class="btn btn-primary next">
-                                                        Next
-                                                        <i class="glyphicon glyphicon-chevron-right"></i>
-                                                    </button>
+                                    <!-- Bootstrap Image Gallery lightbox -->
+                                    <div id="blueimp-gallery" class="blueimp-gallery">
+                                        <!-- The container for the modal slides -->
+                                        <div class="slides"></div>
+                                        <!-- Controls for the borderless lightbox -->
+                                        <h3 class="title"></h3>
+                                        <a class="prev">‹</a>
+                                        <a class="next">›</a>
+                                        <a class="close">×</a>
+                                        <a class="play-pause"></a>
+                                        <ol class="indicator"></ol>
+                                        <!-- The modal dialog, which will be used to wrap the lightbox content -->
+                                        <div class="modal fade">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" aria-hidden="true">&times;</button>
+                                                        <h4 class="modal-title"></h4>
+                                                    </div>
+                                                    <div class="modal-body next"></div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-default pull-left prev">
+                                                            <i class="glyphicon glyphicon-chevron-left"></i>
+                                                            Previous
+                                                        </button>
+                                                        <button type="button" class="btn btn-primary next">
+                                                            Next
+                                                            <i class="glyphicon glyphicon-chevron-right"></i>
+                                                        </button>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <!-- Immagini per la galleria -->
-                                <div id="links">
-                                    <a href="img/recensioni/maldive_spiaggia.jpg" data-gallery>
-                                        <img src="img/recensioni/maldive_spiaggia_small.jpg" alt="maldive_spiaggia">
-                                    </a>
-                                    <a href="img/recensioni/maldive_amaca.jpg" data-gallery>
-                                        <img src="img/recensioni/maldive_amaca_small.jpg" alt="maldive_amaca">
-                                    </a>
-                                    <a href="img/recensioni/maldive_miniatollo.jpg" data-gallery>
-                                        <img src="img/recensioni/maldive_miniatollo_small.jpg" alt="maldive_miniatollo">
-                                    </a>
-                                    <a href="img/recensioni/maldive_passerella.jpg" data-gallery>
-                                        <img src="img/recensioni/maldive_passerella_small.jpg" alt="maldive_passerella">
-                                    </a>
+                                    <!-- Immagini per la galleria -->
+                                    <div id="links">
+                                        <a href="img/recensioni/maldive_spiaggia.jpg" data-gallery>
+                                            <img src="img/recensioni/maldive_spiaggia_small.jpg" alt="maldive_spiaggia">
+                                        </a>
+                                        <a href="img/recensioni/maldive_amaca.jpg" data-gallery>
+                                            <img src="img/recensioni/maldive_amaca_small.jpg" alt="maldive_amaca">
+                                        </a>
+                                        <a href="img/recensioni/maldive_miniatollo.jpg" data-gallery>
+                                            <img src="img/recensioni/maldive_miniatollo_small.jpg" alt="maldive_miniatollo">
+                                        </a>
+                                        <a href="img/recensioni/maldive_passerella.jpg" data-gallery>
+                                            <img src="img/recensioni/maldive_passerella_small.jpg" alt="maldive_passerella">
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
 
