--- a/recensioni_20140620-1_norvegia.html
+++ b/recensioni_20140620-1_norvegia.html
@@ -31,7 +31,6 @@
     <link href="material-design-iconic-font/css/material-design-iconic-font.css" rel="stylesheet">
     
     <!-- Image Gallery -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
 
@@ -86,7 +85,7 @@
                         <div class="panel-body">
                             <div class="col-md-3">
                                 <div class="row">
-                                    <img src="img/user/man.jpg" alt="Immagine profilo Caia" class="center-block hidden-xs"/>
+                                    <img src="img/user/man.jpg" alt="Immagine di profilo di Caio Gracco" class="center-block hidden-xs"/>
                                 </div>
                                 <div class="row" align="center">
                                     <h4>Utente: Caio Gracco</h4>
