Corretti vari files (vedi descrizione)
Slider index in v. mobile, div su articolo Pasqua (appariva una linea
doppia prima del footer), aggiornata Sitemap da
http://glastravelsdevteam.github.io/

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <img src="img/parigi2000x550.jpg" alt="immagine Parigi" />
                         <div class="slide_text">
                             <div class="slide_title">Parigi</div>
-                            <div class="slide_byline">Viaggio romantico per novelli sposi.</div>
+                            <div class="slide_byline">Offerta per novelli sposi.</div>
                             <a class="btn btn-default slider-button" href="/viaggi/europa/parigi.html" role="button">Offerta</a>
                         </div>
                     </li>
@@ -86,7 +86,7 @@
                         <img src="img/isole-fiji2000x550.jpg" alt="immagine Isole Fiji" />
                         <div class="slide_text">
                             <div class="slide_title">Isole Fiji</div>
-                            <div class="slide_byline">Super offerta fino al 10 giugno 2015!</div>
+                            <div class="slide_byline">Solo fino al 10 giugno 2015!</div>
                             <a class="btn btn-default slider-button" href="/viaggi/oceania/isole-fiji.html" role="button">Offerta</a>
                         </div>
                     </li>
