--- a/carrello_conparigi.html
+++ b/carrello_conparigi.html
@@ -89,7 +89,7 @@
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
-                                <h4>dal 11-07-2015 al 21-07-2015</h4>
+                                <h4>dal 01-05-2015 al 07-05-2015</h4>
                             </div>
                             <div class="clearfix"></div>
                         </div>
@@ -138,7 +138,7 @@
                                 <a class="btn btn-default" href="#" role="button">Riepilogo</a>
                                 <a class="btn btn-warning" href="#" role="button">Acquista</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
-                                <p><em>( pulsanti disabilitati )</em></p>
+                                <p><em>( pulsanti disabilitati in questa demo )</em></p>
                             </div>
 
                         </div>
