Piccole modifiche acquisti
Piccole modifiche relative all'acquisto dei viaggi.

--- a/acquisti_conparigi.html
+++ b/acquisti_conparigi.html
@@ -68,7 +68,7 @@
                         <span class="list-group-item list-group-item-default">Area personale</span>
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">1</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="acquisti_conparigi.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
                         <a href="/recensioni/profilo_maldive.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
@@ -97,10 +97,10 @@
                             <img src="img/parigi550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <p>2 adulti</p>
-                                <p>Totale: EUR 1.700,00 - VISA</p>
                                 <p>Transazione # 404-2941210-0056455</p>
                                 <p>Effettuata il: 01-01-2015</p>
+                                <p>Totale: EUR 1.700,00</p>
+                                <p>VISA/ELECTRON - ************0123</p>
                                 <hr/>
                                 <a class="btn btn-warning" href="/fattura_404-2941210-0056455.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
@@ -128,10 +128,10 @@
                             <img src="img/maldive550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <p>2 adulti - 1 bambino</p>
-                                <p>Totale: EUR 2.100,00 - MASTERCARD</p>
                                 <p>Transazione # 404-2941210-6149129</p>
                                 <p>Effettuata il: 22-04-2014</p>
+                                <p>Totale: EUR 2.100,00</p>
+                                <p>MASTERCARD - ************0123</p>
                                 <hr/>
                                 <a class="btn btn-warning" href="/fattura_404-2941210-6149129.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
