--- a/acquisti.html
+++ b/acquisti.html
@@ -97,10 +97,10 @@
                             <img src="img/maldive550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <p>2 adulti - 1 bambino</p>
-                                <p>Totale: EUR 2.100,00 - MASTERCARD</p>
                                 <p>Transazione # 404-2941210-6149129</p>
                                 <p>Effettuata il: 22-04-2014</p>
+                                <p>Totale: EUR 2.100,00</p>
+                                <p>MASTERCARD - ************0123</p>
                                 <hr/>
                                 <a class="btn btn-warning" href="/fattura_404-2941210-6149129.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
