--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </script>
 
     <!-- Date Picker -->
-    <script src="http://eternicode.github.io/bootstrap-datepicker/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+    <script src="/js/bootstrap-datepicker.js"></script>
 
     <script type="text/javascript">
         function showMe(it, box) {
