--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
                                 <label>Seleziona le date del tuo viaggio:</label>
                                 <div class="input-daterange input-group">
                                     <span class="input-group-addon">Dal</span>
-                                    <input type="text" class="input-sm form-control" name="start" id="datepicker-dal" />
+                                    <input type="text" class="input-sm form-control" name="start" id="datepicker-dal" value="01/05/2015"/>
                                     <span class="input-group-addon">al</span>
-                                    <input type="text" class="input-sm form-control" name="end" id="datepicker-al" />
+                                    <input type="text" class="input-sm form-control" name="end" id="datepicker-al" value="07/05/2015"/>
                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                 </div>
                             </div>
