--- a/acquisti_conparigi.html
+++ b/acquisti_conparigi.html
@@ -104,7 +104,7 @@
                                 <hr/>
                                 <a class="btn btn-warning" href="/fattura_404-2941210-0056455.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
-                                <a class="btn btn-default" href="/recensioni/profilo_parigi_inserisci.html" role="button">Scrivi una recensione</a>
+                                <a class="btn btn-success" href="/recensioni/profilo_parigi_inserisci.html" role="button">Scrivi una recensione</a>
                             </div>
 
                         </div>
