--- a/viaggi/acquisto-viaggio_riepilogo.html
+++ b/viaggi/acquisto-viaggio_riepilogo.html
@@ -65,7 +65,7 @@
 
                 <div class="col-lg-12">
 
-                    <!-- AUSTRALIA -->
+                    <!-- DATI VIAGGIO -->
 
                     <div class="panel panel-default">
 
@@ -189,7 +189,7 @@
 
                         <div class="panel-body">
                                 <a class="btn btn-default pull-left" href="/viaggi/acquisto-viaggio.html" role="button">Modifica</a>
-                                <a class="btn btn-warning pull-right" href="/acquisti_conparigi.html" role="button">Conferma pagamento</a>
+                                <a class="btn btn-warning pull-right" href="/viaggi/acquisto-viaggio_transazione.html" role="button">Completa pagamento</a>
                         </div>
                     </div>
                 </div>
