--- a/viaggi/acquisto-viaggio.html
+++ b/viaggi/acquisto-viaggio.html
@@ -142,11 +142,17 @@
                                                             <input type="checkbox" name="modtype" value="checboxanimali" onclick="showMe('animali', this)" /> selezionare ed indicare il numero
                                                             <div id="animali" style="display:none">
                                                                 <select id="selectbasic" name="selectbasic" class="form-control">
+                                                                    <option value="0">Nessuno</option>
                                                                     <option value="1">1</option>
                                                                     <option value="2">2</option>
                                                                     <option value="3">3</option>
                                                                     <option value="4">4</option>
-                                                                    <option value="5">4+</option>
+                                                                    <option value="5">5</option>
+                                                                    <option value="6">6</option>
+                                                                    <option value="7">7</option>
+                                                                    <option value="8">8</option>
+                                                                    <option value="9">9</option>
+                                                                    <option value="10">10</option>
                                                                 </select>
                                                             </div>
                                                         </form>
