--- a/index.html
+++ b/index.html
@@ -161,11 +161,17 @@
                                 <label class="col-md-3 control-label" for="selectbasic">Numero adulti:</label>
                                 <div class="col-md-3">
                                     <select id="selectbasic" name="selectbasic" class="form-control">
+                                        <option value="0">Nessuno</option>
                                         <option value="1">1</option>
-                                        <option value="2" selected="selected">2</option>
+                                        <option value="2" selected>2</option>
                                         <option value="3">3</option>
                                         <option value="4">4</option>
-                                        <option value="5">4+</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
                                     </select>
                                     <br>
                                 </div>
@@ -176,11 +182,17 @@
                                 <label class="col-md-3 control-label" for="selectbasic">Numero bambini:</label>
                                 <div class="col-md-3">
                                     <select id="selectbasic" name="selectbasic" class="form-control">
-                                        <option value="1">Nessuno</option>
-                                        <option value="2">1</option>
-                                        <option value="3">2</option>
-                                        <option value="4">3</option>
-                                        <option value="5">3+</option>
+                                        <option value="0">Nessuno</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
                                     </select>
                                     <br>
                                 </div>
@@ -210,11 +222,17 @@
                                         <input type="checkbox" name="modtype" value="checboxanimali" onclick="showMe('animali', this)" /> selezionare ed indicare il numero
                                         <div id="animali" style="display:none">
                                             <select id="selectbasic" name="selectbasic" class="form-control">
+                                                <option value="0">Nessuno</option>
                                                 <option value="1">1</option>
                                                 <option value="2">2</option>
                                                 <option value="3">3</option>
                                                 <option value="4">4</option>
-                                                <option value="5">4+</option>
+                                                <option value="5">5</option>
+                                                <option value="6">6</option>
+                                                <option value="7">7</option>
+                                                <option value="8">8</option>
+                                                <option value="9">9</option>
+                                                <option value="10">10</option>
                                             </select>
                                         </div>
                                     </form>
