--- a/viaggi/acquisto-viaggio.html
+++ b/viaggi/acquisto-viaggio.html
@@ -620,14 +620,14 @@
 
                             <div class="panel-body hidden-xs">
                                 <a class="btn btn-default pull-left" href="/carrello_conparigi.html" role="button">Torna al carrello</a>
-                                <input type="submit" class="btn btn-warning pull-right" value="Conferma dati" formaction="/viaggi/acquisto-viaggio_riepilogo.html">
+                                <input type="submit" class="btn btn-warning pull-right" value="Conferma dati" formaction="/viaggi/acquisto-viaggio_transazione">
                             </div>
                             <div class="panel-body visible-xs">
                                 <p class="text-center visible-xs">
                                     <a class="btn btn-default" href="/carrello_conparigi.html" role="button">Torna al carrello</a>
                                 </p>
                                 <p class="text-center visible-xs">
-                                    <input type="submit" class="btn btn-warning" value="Conferma dati" formaction="/viaggi/acquisto-viaggio_riepilogo.html">
+                                    <input type="submit" class="btn btn-warning" value="Conferma dati" formaction="/viaggi/acquisto-viaggio_transazione.html">
                                 </p>
                             </div>
                         </form>
